# automated-gdpr-compliance-checker

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
automatedcompliancechecker/: pyproject.toml
automatedcompliancechecker/dev/: frontend_app.py
automatedcompliancechecker/src/automatedcompliancechecker/: main.py
automatedcompliancechecker/src/automatedcompliancechecker/models/: schemas.py
automatedcompliancechecker/src/automatedcompliancechecker/routers/: compliance.py
automatedcompliancechecker/src/automatedcompliancechecker/services/: compliance_graph.py  report_builder.py
automatedcompliancechecker/src/automatedcompliancechecker/utils/: document_parser.py  gdpr_articles.py
dev/: frontend_app.py
src/automatedcompliancechecker/: main.py
src/automatedcompliancechecker/models/: schemas.py
src/automatedcompliancechecker/routers/: compliance.py
src/automatedcompliancechecker/services/: compliance_graph.py  model_manager.py  report_builder.py
src/automatedcompliancechecker/utils/: document_parser.py  gdpr_articles.py  lifespan.py
tests/: conftest.py  test_compliance_graph.py  test_compliance_router.py  test_document_parser.py  test_lifespan_and_main.py  test_model_manager.py  test_readiness.py  test_report_builder.py
