[project]
name = "automatedcompliancechecker"
version = "0.1.0"
description = "Automated GDPR compliance checker with FastAPI and ML components"
authors = [
    {name = "Edgar Medina",email = "edgarmedina1801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.136.1,<0.137.0",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)"
]

[dependency-groups]
dev = [
    "streamlit (>=1.57.0,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, pyflakes, imports

[tool.poetry]
packages = [{ include = "automatedcompliancechecker", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

